# ScrollKeeper

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/whisper/: Dockerfile  app.py  requirements.txt
src/scrollkeeper/: __init__.py  bot.py  config.py  llm.py  main.py  models.py  service_manager.py  session_manager.py  storage.py  voice_compat.py
tests/: test_bot_integration.py  test_llm_summary.py  test_service_manager.py  test_voice_compat.py
